<resources>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>

    <string name="app_name">PeersPick</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confPass">Confirm Password</string>
    <string name="register">Submit Registration</string>
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Register</string>

    <string name="number_stairs">How many stairs can you climb?</string>
    <string name="number_stairs_number">15</string>

    <string name="ramp_length_text">Set maximum ramp length (feet):</string>
    <string name="ramp_length_number">15</string>

    <string name="walk_distance_label_text">Set maximum walking distance (feet):</string>
    <string name="walk_distance_number_value">15</string>

    <string name="can_you_walk_on_uneven_surfaces">Can you walk on uneven surfaces?</string>
    <string name="own_disability_placard">Do you own a disability placard?</string>

    <string name="disability_profile">Disability Profile</string>

    <string name="route_finder">Route Finder</string>
</resources>
